theme.css
@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);

.jumbotron { display: none; }

body {
  font-family: "PT Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #dbdbdb;
  background-color: #4f4f4f;
}
.navbar-main .navbar-header {
  font-weight: bold;
}

.navbar-default {
  background-color: #2E2E2E;
  border-color: #000;
}
.navbar-main { background-color: #000; }

a,
.navbar-default .navbar-nav>li>a {
  color: #A9A9A9;
}

a:hover,
.navbar-default .navbar-nav>li>a:hover {
   color: #fff;
   text-decoration: none;
}

.navbar-default .navbar-nav>.open>a,
.navbar-default .navbar-nav>.open>a:focus,
.navbar-default .navbar-nav>.open>a:hover {
    color: #fff;
    background-color: #2e2e2e;

}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>.active>a:hover {
    color: #fff;
    background-color: #4f4f4f;
}

.nav-pills>li.active>a,
.nav-pills>li.active>a:focus,
.nav-pills>li.active>a:hover {
    color: #fff;
    background-color: #2e2e2e;
}

.dropdown-menu>.active>a,
.dropdown-menu>.active>a:focus,
.dropdown-menu>.active>a:hover {
    background-color: #2e2e2e;
}

#sidebar .handle, #sidebar .info {
    color: #2e2e2e;
    box-shadow: -5px 0 10px 0px #2e2e2e;
}

#sidebar .info a { color: #4f4f4f; }

@media (min-width: 768px) {
  #rating .dl-horizontal dd {
    margin-left: 230px;
  }
  #rating .dl-horizontal dt {
    width: 220px;
  }
}

/* the carousel */
.slick-slide img { display: inherit !important; }

